# Elaborato_Programmazione

./: .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  ChatRegister.cpp  ChatRegister.h  ChatView.cpp  ChatView.h  Message.cpp  Message.h  PrimaryUser.cpp  PrimaryUser.h  ReceivedMessage.cpp  ReceivedMessage.h  Register.cpp  Register.h  RegisterView.cpp  RegisterView.h  SecondaryUser.cpp  SecondaryUser.h  SentMessage.cpp  SentMessage.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatRegisterTest.cpp  ChatTest.cpp  MessageTest.cpp  RegisterTest.cpp  runAllTest.cpp
